avancei na anotação do art. 30. Vou no n.º 2.

--- a/anotacao.org
+++ b/anotacao.org
@@ -27,9 +27,10 @@ Artigo 29.º \\
 
 ** Bibliografia :ignore:
 
-[cite/nocite:@hofmann2023;@muller-terpitz2023]
+[cite/nocite:@hofmann2023;@muller-terpitz2023;@wilman2024]
 
 *Bibliografia:*
+
 #+print_bibliography:
 
 
@@ -67,7 +68,7 @@ Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em 
 
 *4. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
 
-*5. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
+*5. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Embora improvável, é possível que uma micro ou pequena empresa seja a fornecedora de uma plataforma de muito grande dimensão, pois os critérios de determinação das micro e pequenas empresas são distintos dos da determinação das plataformas em linha de muito grande dimensão[cite:@wilman2024, art. 29, n.º 5]. Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
 
 Caso o fornecedor seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, e a sua plataforma em linha que permite a celebração de contratos à distância seja designada pela Comissão Europeia como uma plataforma em linha de muito grande dimensão pode questionar-se a partir de que data devem ser cumpridas as disposições previstas nos artigos 30.º a 32.º do RSD. Resulta do artigo 33.º, n.º 6, 2.º parágrafo, do RSD que as obrigações adicionais dos fornecedores de plataformas em linha de muito grande dimensão e de motores de pesquisa em linha de muito grande dimensão no que se refere à gestão de riscos sistémicos (secção 5 do capítulo III) são aplicáveis no prazo de quatro meses após a notificação da designação ao fornecedor. Nada se prevê, porém, quanto à data em que são aplicáveis as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes (secção 4 do capítulo III). Parecem possíveis duas interpretações: a primeira, mais literal, é a de que as disposições da presente secção são aplicáveis a partir da data da notificação ao fornecedor da designação da sua plataforma como uma plataforma em linha de muito grande dimensão; a segunda é a de que as disposições da presente secção são aplicáveis 4 meses após a notificação ao fornecedor da designação da plataforma como plataforma em linha de muito grande dimensão, aplicando analogicamente o prazo previsto no artigo 33.º, n.º 6, 2.º parágrafo do RSD. Parece-nos que esta segunda opção é mais consentânea com a ponderação de interesses subjacente a esta secção. Considerando o teor das obrigações previstas nos artigos 30.º a 32.º do RSD, a caracterização do fornecedor como micro ou pequena empresa na aceção da Recomendação 2003/361/CE e a classificação como plataforma em linha de muito grande dimensão depender de uma decisão da Comissão Europeia, parece adequado o prazo de quatro meses para o fornecedor assegurar o cumprimento das obrigações previstas na presente secção.
 
@@ -104,13 +105,34 @@ A Proposta, no seu artigo 22.º, previa um regime de rastreabilidade dos comerci
 O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fiável e transparente para os consumidores, bem como para outras partes interessadas, como comerciantes concorrentes e titulares de direitos de propriedade intelectual (...)"[fn:17]. A norma opera com base no princípio /Know Your Business Customer/[cite:Cf., neste sentido, @hofmann2023 art. 30.º, nº 1;@muller-terpitz2023 art. 30.º, n.º 2]. Os fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes devem recolher e disponibilizar informação sobre os comerciantes, antes de os autorizarem a dirigirem, através da plataforma em linha, a sua atividade aos consumidores localizados na União Europeia. A informação recolhida permitirá rastrear os comerciantes, promovendo a transparência e melhorando a proteção dos consumidores e de outras partes interessadas. Espera-se também que dissuada os comerciantes de venderem produtos ou serviços em violação das regras aplicáveis[fn:18].
 
 *** III - Âmbito de aplicação
-*1. Âmbito de aplicação subjetivo*. O artigo 30.º é aplicável aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes que não beneficiem da isenção prevista no artigo 29.º. Na concretização dos destinatários da norma são relevantes os conceitos de "consumidor", "comerciante", "plataforma em linha", e "contrato à distância" definidos no artigo 3.º, e para o qual se remete. O conceito de "plataformas em linha que permitem aos consumidores celebrar contratos à distância" é muito próximo do conceito de "mercado em linha"[fn:19], mas não inclui as plataformas que apoenas permitem a celebração de contratos entre consumidores. Assinala-se que apesar de o conceito de "comerciante" se encontrar definido no artigo 3.º, o considerando n.º 72 indica que "(...) qualquer comerciante, independentemente de ser uma pessoa singular ou coletiva, identificado como tal com base no artigo 6.º-A, n.º 1, alínea /b)/, da Diretiva 2011/83/UE e no artigo 7.º, n.º 4, alínea /f)/, da Diretiva 2005/29/CE, deverá ser rastreável quando oferece um produto ou serviço através de uma plataforma em linha."
+*1. Âmbito de aplicação subjetivo*. O artigo 30.º é aplicável aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes que não beneficiem da isenção prevista no artigo 29.º. Na concretização dos destinatários da norma são relevantes os conceitos de "consumidor", "comerciante", "plataforma em linha", e "contrato à distância" definidos no artigo 3.º, e para o qual se remete. O conceito de "plataformas em linha que permitem aos consumidores celebrar contratos à distância" é muito próximo do conceito de "mercado em linha"[fn:19], mas não inclui as plataformas que apenas permitem a celebração de contratos entre consumidores[cite:@wilman2024 p. 224, n.º 8;@hofmann2023 art. 30.º, n.º 8]. Assinala-se que apesar de o conceito de "comerciante" se encontrar definido no artigo 3.º, o considerando n.º 72 indica que "(...) qualquer comerciante, independentemente de ser uma pessoa singular ou coletiva, identificado como tal com base no artigo 6.º-A, n.º 1, alínea /b)/, da Diretiva 2011/83/UE e no artigo 7.º, n.º 4, alínea /f)/, da Diretiva 2005/29/CE, deverá ser rastreável quando oferece um produto ou serviço através de uma plataforma em linha."
 
-*2. Âmbito de aplicação material*.
+*2. Âmbito de aplicação espacial*. A obrigação imposta neste artigo aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes está limitada em função do âmbito de aplicação espacial do RSD, definido no art. 2.º, para o qual se remete. Deste modo, se o comerciante não prestar as informações mencionados no n.º 1 ou se não as corrigir ou atualizar dentro do prazo fixado no n.º 3, o fornecedor da plataforma tem o dever de, respetivamente, (i) não autorizar ou (ii) suspender a utilização da plataforma pelo comerciante para promover mensagens ou oferecer produtos ou serviços /apenas aos consumidores localizados na União Europeia/. Tal significa que nestes casos o fornecedor cumpre o artigo 30.º se recusar a autorização ou suspender a utilização da sua plataforma pelo comerciante apenas aos consumidores localizados na União Europeia, por exemplo, através do mecanismo de bloqueio geogrático, permitindo que o comerciante continue a usar a plataforma para dirigir a sua atividade aos consumidores localizados fora da União Europeia[cite:Cf., no mesmo sentido, @hofmann2023, art. 30.º, n.º 12].
 
-*3. Âmbito de aplicação espacial*. A obrigação imposta neste artigo aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes está limitada em função do âmbito de aplicação espacial do RSD, definido no art. 2.º, para o qual se remete. Deste modo, se o comerciante não prestar as informações mencionados no n.º 1 ou se não as corrigir ou atualizar dentro do prazo fixado no n.º 3, o fornecedor da plataforma tem o dever de, respetivamente, (i) não autorizar ou (ii) suspender a utilização da plataforma pelo comerciante para promover mensagens ou oferecer produtos ou serviços /apenas aos consumidores localizados na União Europeia/. Tal significa que nestes casos o fornecedor cumpre o artigo 30.º se recusar a autorização ou suspender a utilização da sua plataforma pelo comerciante apenas aos consumidores localizados na União Europeia, por exemplo, através do mecanismo de bloqueio geogrático, permitindo que o comerciante continue a usar a plataforma para dirigir a sua atividade aos consumidores localizados fora da União Europeia[cite:Cf., no mesmo sentido, @hofmann2023, art. 30.º, n.º 12].
+*3. Âmbito de aplicação material*. A ratreabilidade dos comerciantes tem por objeto a utilização das plataformas em linha "promover mensagens e "oferecer produtos ou serviços". A promoção de mensagens pelo comerciante parece reconduzível ao conceito de "anúncio publicitário" definido no artigo 3.º, al. /r)/. As noções de "produtos" e "serviços" parecem ser, respetivamente, as definidas no art. 2.º, n.º 5, da Diretiva relativa a certos aspetos dos contratos de compra e venda de bens[fn:20] e no art. 4.º, n.º 1, da Diretiva serviços[fn:21]. O artigo, ao mencionar a promoção de mensagens e a oferta de produtos e serviços /não/ abrange a conclusão do contrato[cite:Cf., neste sentido;@hofmann2023 art. 30.º, n.º 12;@muller-terpitz2023 art. 30.º, n.º 6].
 
-*** IV -
+*** IV - Recolha de informações (n.º 1)
+*4. Obrigação de recolha e ónus de prestação de informação*. Resulta do n.º 1 que os fornecedores das plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes têm a obrigação de não permitir a utilização da sua plataforma pelo comerciante para promover mensagens ou oferecer produtos e serviços aos consumidores localizados na União Europeia /antes/ de recolhida a informação elecanda neste número. Só fica vedada a utilização da plataforma em linha pelo comerciante nos casos de promoção de mensagens ou oferta de produtos ou serviços aos consumidores localizados na União Europeia.
+
+Do n.º 1 não parece resultar um dever, mas sim ónus do comerciante prestar a informação. Dito de outra forma, o comerciante não se encontra obrigado pelo artigo 30.º a prestar a informação ao fornecedor da plataforma em linha, mas se não o fizer não poderá utilizar a plataforma para promover mensagens ou oferecer produtos ou serviços aos consumidores localizados na União Europeia[cite:@hofmann2023 art. 30.º, n.º 12]. O artigo não impede que o fornecedor permita que o comerciante: /(i)/ utilize a plataforma em linha em momento anterior ao da prestação da informação para realizar atos diferentes da promoção de mensagens ou oferta de produtos ou serviços, como, por exemplo, a organização da sua "loja virtual" na plataforma em linha[cite:@hofmann2023 art. 30.º, n.º 11]; /(ii)/ dirija a sua atividade para os consumidores localizados fora da União Europeia (cf. /supra/ *III.2.*).
+
+*a) Nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante*. Esta informação já é exigida no artigo 6.º da Diretiva relativa aos direitos dos consumidores[fn:22] e visa facilitar a identificação e contacto com o comerciante e promover um ambiente em linha mais seguro, em primeira linha para os consumidores. Neste contexto, o comerciante (seja ele pessoa singular ou coletiva) deve indicar o seu nome completo. O endereço postal deve corresponder à morada onde o comerciante pode ser judicialmente demandado (podendo, consoante os casos, ser uma das que resulta da aplicação dos artigos 4.º, 7.º, n.º 5, ou 17.º, n.º 2, conjugados com o artigo 63.º, todos do Regulamento Bruxelas I /bis/[fn:23]). A indicação de um número telefone é obrigatória, divergindo do que decidiu o TJUE no contexto da Diretiva relativa aos direitos dos consumidores[fn:24]. Por fim, o endereço de correio eletrónico indicado deve permitir o efetivo contacto com o comerciante e não pode ser um endereço configurado com respostas automáticas que remetam para outros meios de contacto[cite:@hofmann2023 art. 30.º, n.º 19].
+
+*b) Cópia do documento de identificação do comerciante ou qualquer outra identificação eletrónica*. O fornecedor deve receber cópia do documento de identificação do comerciante. No caso de comerciantes com cartão do cidadão português, a cópia pode ser substituída pelo documento pdf gerado pela aplicação móvel gov.pt, ao abrigo do Regulamento eIDAS[fn:25].
+
+*c) Dados da conta de pagamento do comerciante*. O fornecedor deve receber informações sobre a conta de pagamento do comerciante. A noção de "conta de pagamento" não está definida no RSD, mas corresponde à definição constante do artigo 2.º, n.º 22[fn:26], do Regulamento relativo às taxas de intercâmbio aplicáveis a operações de pagamento baseadas em cartões[fn:27].
+
+*d) Registo comercial ou outro registo público equivalente*. Caso o comerciante esteja inscrito no registo comercial ou em outro registo público equivalente, o fornecer deve receber a informação de que o comerciante se encontra inscrito e o seu número de registo.
+
+*e) Autocertificação do comerciante*. O fornecedor deve receber uma autocertificação do comerciante em que este se compromete a oferecer apenas produtos ou serviços que respeitem as regras aplicáveis do direito da União. É dúvidoso que esta autocertificação seja eficaz na promoção de um ambiente em linha mais seguro ou seja um dissuasor para os comerciantes que pretendam dirigir a sua atividade para o mercado da União Europeia sem cumprir as regras que aí são aplicáveis[cite:Suscitando dúvidas similares, cf. @hofmann2023 art. 30, n.º 23;@muller-terpitz2023 art. 30, n.º 14].
+
+*** V - Disposição transitória (n.º 2, 2.º parágrafo)
+A recolha de informação prevista no n.º 1 deste artigo parte do pressuposto de que o comerciante ainda não utiliza a plataforma em linha do fornecedor. Se o comerciante, à data da entrada em aplicação das normas do RSD, já utilizava a plataforma em linha, o fornecedor deve solicitar-lhe a prestação das informações elencadas no n.º 1. Se os comerciantes em causa não fornecerem as informações até 17 de fevereiro de 2025, os fornecedores suspendem o fornecimento dos seus serviços a tais comerciantes até que estes tenham fornecido todas as informações.
+
+*** VI - Obrigação de avaliação da informação (n.º 2, 1.º parágrafo)
+
+
+
 
 
 
@@ -153,6 +175,22 @@ Artigo 32.º \\
 ** Comentário
 
 * Footnotes
+
+[fn:27] Regulamento (UE) 2015/751 do Parlamento Europeu e do Conselho, de 29 de abril de 2015, relativo às taxas de intercâmbio aplicáveis a operações de pagamento baseadas em cartões, publicado no JO L 123 de 19.5.2015.
+
+[fn:26] "«Conta de pagamento», uma conta detida em nome de um ou mais utilizadores de serviços de pagamento, utilizada para a execução de operações de pagamento, inclusive através de uma conta específica para moeda eletrónica, na aceção do artigo 2.º, ponto 2, da Diretiva 2009/110/CE do Parlamento Europeu e do Conselho".
+
+[fn:25] Regulamento (UE) n. ° 910/2014 do Parlamento Europeu e do Conselho, de 23 de julho de 2014 , relativo à identificação eletrónica e aos serviços de confiança para as transações eletrónicas no mercado interno e que revoga a Diretiva 1999/93/CE, publicado no JO L 257 de 28.8.2014.
+
+[fn:24] Cf. Acórdão de 10 de julho de 2019, /Amazon EU/, C-649/17, EU:C:2019:576, considerando n.º 51.
+
+[fn:23] Regulamento (UE) n. ° 1215/2012 do Parlamento Europeu e do Conselho, de 12 de dezembro de 2012, relativo à competência judiciária, ao reconhecimento e à execução de decisões em matéria civil e comercial (reformulação), publicado no JO L 351 de 20.12.2012.
+
+[fn:22] Directiva 2011/83/UE do Parlamento Europeu e do Conselho, de 25 de Outubro de 2011, relativa aos direitos dos consumidores, que altera a Directiva 93/13/CEE do Conselho e a Directiva 1999/44/CE do Parlamento Europeu e do Conselho e que revoga a Directiva 85/577/CEE do Conselho e a Directiva 97/7/CE do Parlamento Europeu e do Conselho Texto relevante para efeitos do EEE, publicada no JO L 304 de 22.11.2011.
+
+[fn:21] Directiva 2006/123/CE do Parlamento Europeu e do Conselho, de 12 de Dezembro de 2006 , relativa aos serviços no mercado interno, publicada no JO L 376 de 27.12.2006.
+
+[fn:20] Diretiva (UE) 2019/771 do Parlamento Europeu e do Conselho, de 20 de maio de 2019, relativa a certos aspetos dos contratos de compra e venda de bens que altera o Regulamento (UE) 2017/2394 e a Diretiva 2009/22/CE e que revoga a Diretiva 1999/44/CE, publicada no JO L 136 de 22.5.2019.
 
 [fn:19] Introduzido pela Diretiva (UE) 2019/2161 do Parlamento Europeu e do Conselho de 27 de novembro de 2019 que altera a Diretiva 93/13/CEE do Conselho e as Diretivas 98/6/CE, 2005/29/CE e 2011/83/UE do Parlamento Europeu e do Conselho a fim de assegurar uma melhor aplicação e a modernização das regras da União em matéria de defesa dos consumidores, publicada no JO L 328 de 18 de dezembro de 2019.
 
