concluí até ao art. 30, n.º 5

--- a/anotacao.org
+++ b/anotacao.org
@@ -137,9 +137,45 @@ fiabilidade semelhante para efeitos de cumprimento desta obrigação"[fn:28]. A 
 
 O fornecedor não é obrigado a verificar a exatidão das informações recebidas. O responsável pela exatidão das informações é o comerciante (art. 30.º, n.º 2, 1.º parágrafo, /in fine/ do RSD). Se, no entanto, o fornecedor tiver conhecimento de que as informações são inexatas, não deve autorizar a utilização da plataforma antes da correção das mesmas pelo comerciante[cite:Cf., neste sentido, @hofmann2023;art. 30.º, n.º 29].
 
-*7. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:@wilman2024 art. 30.º, n.º 13;@hofmann2023 art. 30.º, n.º 25;@muller-terpitz2023 art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º, n.º 4, da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º, n.º 4, da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito em sede da DMD[fn:31]. Não se visa garantir um determinado resultado, o que compreende em face do art. 8.º do RSD e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às cirscunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços" se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no art. 2.º, n.º 2[cite:@hofmann2023; art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
+*7. Critério de diligência*. Estabelece-se que o fornecedor deve "envidar todos os esforços" para avaliar se as informações são fiáveis e completas. Esta expressão deve ser interpretada com cautela e compaginada com o esclarecimento no considerando n.º 73 de que "os fornecedores de plataformas em linha em causa não deverão ser obrigados a realizar exercícios de apuramento de factos em linha excessivos ou dispendiosos, nem a efetuar verificações desproporcionadas no local". Considera-se que o critério de diligência a adotar é o de "melhores esforços"[cite:@wilman2024 art. 30.º, n.º 13;@hofmann2023 art. 30.º, n.º 25;@muller-terpitz2023 art. 30.º, n.º 18], correspondente à versão em língua inglesa /"best efforts"/ e também ao artigo 17.º, n.º 4, da DMD. O conceito de "melhores esforços" não se encontra definido no RSD e deve ser objeto de interpretação autónoma, a qual deve atender à finalidade e objetivos do artigo 31.º e do RSD. Ainda assim, pensa-se que é possível traçar paralelos com a utilização do conceito no artigo 17.º, n.º 4, da DMD e tomar em consideração as orientações da Comissão Europeia sobre este conceito nessa sede[fn:31]. Não se visa garantir um determinado resultado, o que compreende em face do art. 8.º do RSD e da vontade de não impor encargos desproporcionados[fn:30]. Deve ser feita uma análise casuística, atendendo às cirscunstâncias do caso concreto e à complexidade da avaliação, sempre tendo em atenção o princípio da proporcionalidade. Pode questionar-se se o fornecedor empregou os seus "melhores esforços" se efetuou a sua avaliação com base num (e apenas um) dos elementos elencados no art. 2.º, n.º 2[cite:@hofmann2023; art. 30.º, n.º 26]. Atendendo à natureza casuística do conceito, a resposta afirmativa ou negativa a esta questão dependerá das circunstâncias do caso concreto.
 
 *** VII - Informações inexatas, incompletas ou desatualizadas (n.º 3)
+
+*8. Regime*. Se o fornecedor da plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes obtiver indicações suficientes ou motivos para supor que qualquer informação a que se refere o n.º 1 obtida do comerciante em causa é inexata, incompleta ou está desatualizada, o fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional.
+
+*9. Tipologia de informações*. O n.º 3 refere informações inexatas, incompletas ou desatualizadas. São informações inexatas aquelas que não correspondem à realidade (/v.g./: o comerciante indica um número de telefone que não lhe pertence). São informações incompletas aquelas em que não consta a totalidade da informação necessária (/v.g./: o comerciante indica a a rua, cidade e país da sua sede, mas não indica o n.º da porta). Uma informação desatualizada é uma informação que era exata e completa quando foi prestada, mas com o decurso de tempo se tornou inexata (/v.g./: o comerciante indicou a morada da sede, mas, posteriormente, transferiu a sede para outro local). Na verdade, crê-se que as informações desatualizadas serão sempre informações inexatas e, por isso, duvida-se que as mesmas tenham autonomia face a estas últimas[cite:@muller-terpitz2023; art. 30.º, n.º 31].
+
+*10. Indicações suficientes ou motivos para supor*. O dever do fornecedor de solicitar a correção ao comerciante surge quando obtiver indicações suficientes ou motivos para supor que as informações prestadas são inexatas, incompletas ou desatualizadas. O conceito de indicações suficientes não é definido no RSD. Pensa-se que será uma indicação suficiente, por exemplo, uma comunicação de um consumidor a informar, por exemplo, que o endereço de correio eletrónico disponibilizado pelo comerciante não permite o contacto. Quanto aos motivos para supor, considera-se que eles permitem ao fornecedor efetuar uma verificação oficiosa da correção, completude e atualidade das informações prestadas pelo comercianteo[cite:@hofmann2023 art. 30.º, n.ºs 36 e 37;@muller-terpitz2023 art. 30.º, n.º 28].
+
+*11. Correção das informações*. O fornecedor deve solicitar ao comerciante que corrija a situação, sem demora ou no prazo fixado pelo direito da União e nacional. Visa-se uma correção sem atrasos indevidos. Não parece possível fixar o prazo de forma rígida, uma vez que o mesmo deverá atender às circunstâncias do caso concreto, nomeadamente à dificuldade de efetuar a correção[cite:@hofmann2023; art. 30.º, n.º 42].
+
+*12. Consequência jurídica*. Efetuada a solicitação de correção das informações, o comerciante pode /(i)/ corrigir as informações dentro do prazo fixado, /(ii)/ corrigir as informações fora do prazo ou /(iii)/ pode não corrigir as informações. No primeiro caso, o fornecedor deve manter o serviço e pode, ao abrigo do n.º 3, examinar as informações corrigidas para apurar se há novas informações inexatas, incompletas ou desatualizadas. Nos segundo e terceiro casos, o fornecedor deve suspender rapidamente o serviço que presta ao comerciante, mas apenas quanto aos consumidores localizados na União Europeia (o que pode ser feito recorrendo ao mecanismo de bloqueio geográfico). A diferença entre o segundo e terceiro casos, encontra-se na possibilidade de o comerciante vir a efetuar, tardiamente, a correção das informações. Nesse caso é sustentado que o fornecedor deve examinar a informação antes de levantar a suspensão[cite:@hofmann2023; art. 30.º, n.º 44].
+
+*** VIII - Direito de apresentar uma reclamação (n.º 4)
+
+Nos casos em que um fornecedor de uma plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes se recuse a autorizar um comerciante a utilizar o seu serviço ao abrigo do n.º 1 ou suspenda a utilização do seu serviço ao abrigo do n.º 3, o comerciante tem o direito de apresentar uma reclamação nos termos dos artigos 20.º e 21.º do presente regulamento, em acréscimo ao direito previsto no artigo 4.º, n.º 3, do Regulamento P2B[fn:32].
+
+*** IX - Conservação dos dados (n.º 5)
+O fornecedor de plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes está obrigado a armazenar as informações que obtenha ao abrigo dos n.ºs 1 e 2 de forma segura até que decorram 6 meses contados do termo da relação contratual com o comerciante. A Proposta previa a conservação apenas até ao termo da relação contratual[fn:34]. O alargamento do prazo de conservação constitui um reforço da proteção dos consumidores e pode ser necessário no contexto do art. 32.º[cite:@hofmann2023; art. 30.º, n.º 48]. Durante esse período os dados devem conservados de forma segura, isto é utilizando meios tecnológicos adequados para garantir a segurança dos dados recebidos, atendendo também à natureza destes[cite:@muller-terpitz2023; art. 30.º, n.º 38]. Findo o prazo de conservação, o fornecedor deve apagar os dados, salvo se estiver sujeito a outras eventuais "obrigações de conservar determinados conteúdos durante períodosde tempo mais longos previstas no direito da União ou direito nacional que seja conforme com direito da União"[fn:35].
+
+Esta obrigação de tratamento de dados visa "permitir que sejam apresentadas reclamações contra o comerciante ou que sejam cumpridas as decisões relacionadas com o comerciante" e é considerada pelo legislador europeu "necessária e proporcionada para que as informações possam ser acedidas, nos termos da legislação aplicável, nomeadamente em matéria de proteção de dados pessoais, por autoridades públicas e entidades privadas com um interesse legítimo, incluindo através das decisões de prestação de informações referidas no presente regulamento"[fn:33].
+
+*** X - Divulgação das informações (n.ºs 6 e 7)
+*13. Considerações gerais*. Os n.ºs 6 e 7 regulam a divulgação das informações obtidas ao abrigo dos n.ºs 1 e 2 pelo fornecedor. O n.º 6 regula a divulgação das informações a terceiros. O n.º 7 obriga o fornecedor a publicar, pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas, as informações obtidas ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/ (cf. /supra/ *IV.4.a),d)* e *e)*). Deste modo, e como regra geral, a informação obtida ao abrigo do n.º 1, alíneas /a)/, /d)/ e /e)/, ficará disponível ao público em geral, pois as plataformas em linha que permitem a celebração de aos consumidores celebrar contratos à distância com consumidores não limitam a visualização de informações sobre produtos e serviços na sua plataforma em linha aos cibernautas que criaram uma conta na plataforma e acederam à mesma antes de navegarem pela plataforma. Deste modo, o n.º 6 releva, primordialmente, para conseguir o acesso às informações sobre os dados de identificação (n.º 1, alínea /b)/) e os dados da conta de pagamento (n.º 1, alínea /c)/) do comerciante.
+
+*14. Divulgação das informações a terceiros (n.º 6)*. O fornecedor só pode divulgar as informações obtidas ao abrigo do n.º 1 e 2 a terceiros quando tal lhe seja exigido nos termos do Direito aplicável. O n.º 6 enuncia, sem limitar, que o fornecedor deve divulgar as informações quando tal lhe seja exigido no contexto de uma decisão do artigo 10.º do RSD ou de quaisquer decisões emitidas pelas autoridades competentes dos Estados-Membros ou pela Comissão para o desempenho das suas funções nos termos do presente regulamento.
+
+*15. Divulgação na plataforma das informações previstas no n.º 1, alíneas /a)/, /d)/ e /e)/* (n.º 7). As informações relativas ao nome, endereço postal, número de telefone e endereço de correio eletrónico do comerciante (n.º 1, alínea /a)/), ao registo comercial ou outro registo público equivalente, se o comerciante estiver inscrito (n.º 1, alínea /b)/) e à autocertificação (n.º 1, alínea /e)/) devem ser disponibilizadas aos destinatários de forma clara, facilmente acessível e compreensível e pelo menos na interface em linha da plataforma em linha onde as informações sobre o produto ou sobre o serviço são apresentadas.
+
+*a) Divulgação de forma clara, facilmente acessível e compreensível*.
+
+*b) Pelo menos na interface em linha*.
+
+
+
+
+
+
 
 
 
@@ -187,6 +223,14 @@ Artigo 32.º \\
 ** Comentário
 
 * Footnotes
+
+[fn:35] Cf. Considerando n.º 72.
+
+[fn:34] Art. 22.º, n.º 4, da Proposta.
+
+[fn:33] Cf. Considerando n.º 72.
+
+[fn:32] Regulamento (UE) 2019/1150 do Parlamento Europeu e do Conselho, de 20 de junho de 2019, relativo à promoção da equidade e da transparência para os utilizadores profissionais de serviços de intermediação em linha, publicado no JO L 186 de 11.7.2019.
 
 [fn:31] Comunicação da Comissão ao Parlamento Europeu e ao Conselho : Orientações sobre o artigo 17.º da Diretiva 2019/790 relativa aos direitos de autor no
 mercado único digital, COM(2021) 288 final, 4.6.2021, pp. 9 e ss.
